implemented operators 'volof' and 'reshape'

--- a/eval/lion_eval_frame_set_01.cfg
+++ b/eval/lion_eval_frame_set_01.cfg
@@ -33,6 +33,12 @@
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a ) { y = a~~; };"     in: "f2_t((1:2):(3:4))"     out:"f2_t((1:2):(3:4))"  </> </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a ) { y = ( a~ ** a ); };"   in:  "(1:2):(3:4)"    out: "(10:14):(14:20)"   </> </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a, b ) { y = a / ( b + a ); };" in: "1:2, f2_t(2)" out: "0.33333:0.5"       </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a ) { y = volof( a ); };" in: "2[3[1" out: "6"       </> </>
+    </> </>
+
+    <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> name: "RESHAPE" verbosity: 10 epsilon: 1E-3 max_dev: 1E-2  jacobian_test: true recovery_test: true </> arr: <lion_eval_frame_arr_s>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a ) { y = reshape( volof(a)[#, a ); };" in: "(1:2):(3:4)" out: "(1:2:3:4)" </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a, b ) { y = htp( reshape( volof(a)[#, a ) ) ** b; };" in: "(1:2):(3:4), (1:0:1:0)" out: "4" </> </>
     </> </>
 
     <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> name: "LOGIC" verbosity: -1 epsilon: 1E-3 max_dev: 1E-2  jacobian_test: false recovery_test: true </> arr: <lion_eval_frame_arr_s>
@@ -47,7 +53,7 @@
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a, b ) { y = a >= b; };" in:"0:1, 2:1" out:"-1: 1" </> </>
     </> </>
 
-    <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> name: "BRANCH" verbosity: -1 epsilon: 1E-3 max_dev: 1E-2  jacobian_test: true recovery_test: true </> arr: <lion_eval_frame_arr_s>
+    <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> name: "IFF" verbosity: -1 epsilon: 1E-3 max_dev: 1E-2  jacobian_test: true recovery_test: true </> arr: <lion_eval_frame_arr_s>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a, b, c ) { y = iff( a, b, c ); };" in:"(1:-1), 2, 3" out: "2:3"</> </>
     </> </>
 
@@ -59,7 +65,9 @@
             {
                 cell ack( y <- n, m )
                 {
-                    y = iff( n == 0, m + 1 ) <: iff( m == 0, ack( n - 1, 1 ) ) <: ack( n - 1 ) <: ack( n, m - 1 );
+                    y = iff( n == 0, m + 1 )
+                     <: iff( m == 0, ack( n - 1, 1 ) )
+                     <: ack( n - 1 ) <: ack( n, m - 1 );
                 };
                 y = ack( constof( a ), constof( b ) );
             }
@@ -118,7 +126,7 @@
                 cell( y <- a )
                 {
                     adaptive v1 = ( 0.5 : 1.0 );
-                    y = a~ ** v1;
+                    y = htp( a ) ** v1;
                 }
             "
 
@@ -144,7 +152,7 @@
 
                     adaptive w = #;
 
-                    /// this should produce just one adaptive (not 3) in final mcode
+                    /// this produces just one adaptive (not 3) in final mcode
                     y = c1( w ) <: c1( w ) <: c1( w, a );
                 };
             "
@@ -296,12 +304,12 @@
                 {
                     cell layer( y <- dim_h, a )
                     {
-                        cyclic c = dim_h [ f2_t( 0 );
-                        cyclic h = dim_h [ f2_t( 0 );
+                        cyclic c = dim_h [ 0f2;
+                        cyclic h = dim_h [ 0f2;
 
                         ah1 = a :: h : 1;
 
-                        adaptive w = rand( 4 [ dim_h [ dimof( ah1 ) [ f2_t( # ) ) * f2_t( 0.5 );
+                        adaptive w = rand( 4 [ dim_h [ dimof( ah1 ) [ #f2 ) * 0.5f2;
 
                         c_ = ( lgst( ( w]0 ) ** ah1 ) * c ) + ( lgst( ( w]1 ) ** ah1 ) * tanh( ( w]2 ) ** ah1 ) );
                         y  = ( lgst( ( w]3 ) ** ah1 ) * tanh( c_ ) );
@@ -312,8 +320,8 @@
 
                     cell lstm( y <- dim_out, dim_h, a )
                     {
-                        adaptive w_r = rand( dim_out [ ( dim_h + 1 ) [ f2_t( # ) );
-                        y = softmax( w_r ** ( layer( dim_h, a ) : 1 ) );
+                        adaptive w_r = rand( dim_out [ ( dim_h + 1 ) [ #f2 );
+                        y = softmax( w_r ** ( layer( dim_h, a ) : 1f2 ) );
                     };
 
                     y = lstm( 2, 4, f2_t( a ) );
