renamed logistic operators: lgst -> sigm

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -3,7 +3,7 @@
  */
 
 <bcore_main_set_s> arr: <bcore_main_arr_s>
-//    <#file> "../eval/lion_eval_nop_set_01.cfg" </>
+    <#file> "../eval/lion_eval_nop_set_01.cfg" </>
     <#file> "../eval/lion_eval_frame_set_01.cfg" </>
 //    <#file> "../eval/lion_adaptor_eval_01.cfg" </>
 
