--- a/eval/lion_eval_frame_set_01.cfg
+++ b/eval/lion_eval_frame_set_01.cfg
@@ -29,14 +29,14 @@
     <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> name: "HOLOR SYNTAX2" verbosity: -1 epsilon: 1E-3 max_dev: 1E-2  jacobian_test: true recovery_test: true </> arr: <lion_eval_frame_arr_s>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a = 2[# ) { y = a; };" in:"f2_t(1:2)"          out:"f3_t(1:2)" </> </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a ) { y = a; };"       in:"f2_t((1:2):(3:4))"  out:"f2_t((1:2):(3:4))"  </> </>
-        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a ) { y = exp( lgst((-(a-3)*5*a+5)+16 )+lgst(-1)); };" in: "4"  out:"2.718281828" </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a ) { y = exp( sigm((-(a-3)*5*a+5)+16 )+sigm(-1)); };" in: "4"  out:"2.718281828" </> </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a ) { y = a~~; };"     in: "f2_t((1:2):(3:4))"     out:"f2_t((1:2):(3:4))"  </> </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a ) { y = ( a~ ** a ); };"   in:  "(1:2):(3:4)"    out: "(10:14):(14:20)"   </> </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a, b ) { y = a / ( b + a ); };" in: "1:2, f2_t(2)" out: "0.33333:0.5"       </> </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a ) { y = volof( a ); };" in: "2[3[1" out: "6"       </> </>
     </> </>
 
-    <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> name: "RESHAPE" verbosity: 10 epsilon: 1E-3 max_dev: 1E-2  jacobian_test: true recovery_test: true </> arr: <lion_eval_frame_arr_s>
+    <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> name: "RESHAPE" verbosity: -1 epsilon: 1E-3 max_dev: 1E-2  jacobian_test: true recovery_test: true </> arr: <lion_eval_frame_arr_s>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a ) { y = reshape( volof(a)[#, a ); };" in: "(1:2):(3:4)" out: "(1:2:3:4)" </> </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a, b ) { y = htp( reshape( volof(a)[#, a ) ) ** b; };" in: "(1:2):(3:4), (1:0:1:0)" out: "4" </> </>
     </> </>
@@ -311,8 +311,8 @@
 
                         adaptive w = rand( 4 [ dim_h [ dimof( ah1 ) [ #f2 ) * 0.5f2;
 
-                        c_ = ( lgst( ( w]0 ) ** ah1 ) * c ) + ( lgst( ( w]1 ) ** ah1 ) * tanh( ( w]2 ) ** ah1 ) );
-                        y  = ( lgst( ( w]3 ) ** ah1 ) * tanh( c_ ) );
+                        c_ = ( sigm( ( w]0 ) ** ah1 ) * c ) + ( sigm( ( w]1 ) ** ah1 ) * tanh( ( w]2 ) ** ah1 ) );
+                        y  = ( sigm( ( w]3 ) ** ah1 ) * tanh( c_ ) );
 
                         h = y;
                         c = c_;
@@ -362,9 +362,9 @@
                         adaptive b_o = dim_h [ f2_t( 0 );
                         adaptive b_q = dim_h [ f2_t( 0 );
 
-                        v_f = lgst( ( w_f ** ah ) + b_f );
-                        v_i = lgst( ( w_i ** ah ) + b_i );
-                        v_o = lgst( ( w_o ** ah ) + b_o );
+                        v_f = sigm( ( w_f ** ah ) + b_f );
+                        v_i = sigm( ( w_i ** ah ) + b_i );
+                        v_o = sigm( ( w_o ** ah ) + b_o );
                         v_q = tanh( ( w_q ** ah ) + b_q );
 
                         c_ = ( v_f * c ) + ( v_i * v_q );
