--- a/eval/lion_eval_nop_set_01.cfg
+++ b/eval/lion_eval_nop_set_01.cfg
@@ -8,9 +8,9 @@
     <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_ceil_s></>       ha:"f2_t(2.5)"  hr:"f2_t(3.0)" </> </>
     <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_exp_s></>        ha:"f2_t(0)"    hr:"f2_t(1)" </> </>
     <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_inv_s></>        ha:"f2_t(2)"    hr:"f2_t(0.5)" </> </>
-    <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_lgst_s></>       ha:"f2_t(0)"    hr:"f2_t(0.5)" </> </>
-    <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_lgst_hard_s></>  ha:"f2_t(1)"    hr:"f2_t(0.75)" </> </>
-    <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_lgst_leaky_s></> ha:"f2_t(1)"    hr:"f2_t(0.75)" </> </>
+    <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_sigm_s></>       ha:"f2_t(0)"    hr:"f2_t(0.5)" </> </>
+    <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_sigm_hard_s></>  ha:"f2_t(1)"    hr:"f2_t(0.75)" </> </>
+    <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_sigm_leaky_s></> ha:"f2_t(1)"    hr:"f2_t(0.75)" </> </>
     <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_tanh_s></>       ha:"f2_t(0)"    hr:"f2_t(0)" </> </>
     <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_tanh_hard_s></>  ha:"f2_t(2)"    hr:"f2_t(1)" </> </>
     <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_tanh_leaky_s></> ha:"f3_t(2)"    hr:"f3_t(1.01)" </> </>
@@ -77,9 +77,9 @@
                 <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_exp_s></>        </> </>
                 <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_log_s></>        </> </>
                 <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_inv_s></>        </> </>
-                <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_lgst_s></>       </> </>
-                <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_lgst_hard_s></>  </> </>
-                <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_lgst_leaky_s></> </> </>
+                <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_sigm_s></>       </> </>
+                <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_sigm_hard_s></>  </> </>
+                <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_sigm_leaky_s></> </> </>
                 <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_tanh_s></>       </> </>
                 <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_tanh_hard_s></>  </> </>
                 <lion_eval_nop_ar1_s> param: <lion_eval_nop_param_s> nop:<lion_nop_ar1_tanh_leaky_s></> </> </>
