work on haptive syntax

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -3,8 +3,8 @@
  */
 
 <bcore_main_set_s> arr: <bcore_main_arr_s>
-    <#file> "../eval/lion_eval_nop_set_01.cfg" </>
-    <#file> "../eval/lion_eval_frame_set_01.cfg" </>
+//    <#file> "../eval/lion_eval_nop_set_01.cfg" </>
+//    <#file> "../eval/lion_eval_frame_set_01.cfg" </>
 //    <#file> "../eval/lion_adaptor_eval_01.cfg" </>
 
 //    <#file> "../training/lion_test01.cfg" </>
@@ -24,9 +24,9 @@
 //    <#file> "../dev/kjv/lion_lstm_v2.cfg" </>
 //    <#file> "../dev/kjv/a02/ll05.cfg" </>
 //    <#file> "../dev/holmes/a02/ll01.cfg" </>
-//    <#file> "../dev/holmes/a02/bhpt01.cfg" </>
-//    <#file> "../dev/holmes/a02/bhpt02.cfg" </>
-//    <#file> "../dev/holmes/a02/bhpt03.cfg" </>
+//    <#file> "../dev/holmes/a03/hpt_01.cfg" </>
+//    <#file> "../dev/holmes/a03/hpt_02.cfg" </>
+    <#file> "../dev/holmes/a03/hpt_03b.cfg" </>
 //    <#file> "../dev/tolstoi_ak/a01/ll06.cfg" </>
 
 </></>
