--- a/eval/lion_eval_frame_set_01.cfg
+++ b/eval/lion_eval_frame_set_01.cfg
@@ -212,6 +212,37 @@
 
     <lion_eval_frame_plain_s>
         param: <lion_eval_frame_param_s>
+            name: "Frame MLP2" verbosity: 10 max_dev: 1E-4
+            src:
+            "
+                cell ( y <- a )
+                {
+                    cell affine( y <- n, a )
+                    {
+                        a1 = a : 1;
+                        adaptive w = rand( floor( n ) [ dimof( a1 ) [ # );
+                        y = w ** a1;
+                    };
+
+                    cell mlpc( y <- n, a )
+                    {
+                        saff = sigm <: affine( n, a );
+                        taff = tanh <: affine( n, a );
+                        y = iff( n < 2, reshape( # ) <: taff ) <: mlpc( n / 2 ) <: saff;
+                    };
+
+                    y =	mlpc( 16, a );
+                };
+            "
+            in: "32[1"
+            out:"0.472127"
+            jacobian_test: true
+            recovery_test: true
+        </>
+    </>
+
+    <lion_eval_frame_plain_s>
+        param: <lion_eval_frame_param_s>
             name: "Frame nested" verbosity: -1 max_dev: 1E-4
             src:
             "
