--- a/training/bhpt_test03.cfg
+++ b/training/bhpt_test03.cfg
@@ -1,6 +1,23 @@
 #! ../bin/Release/badapt_dev
 <bhpt_frame_s>
     tutor: <bhpt_tutor_sampler_s>
+        builder: <lion_adaptive_bhpt_builder_s>
+            src:
+            "
+                cell ( y <- a )
+                {
+                    cell layer( y <- hidden_nodes, a )
+                    {
+                        adaptive w = rand( hidden_nodes [ dimof( a ) [ f2_t( # ) );
+                        adaptive b = hidden_nodes [ f2_t( 0 );
+                        y = w ** a + b;
+                    };
+
+                    y =	tanh <: layer( dimof( a ) ) <: relu_leaky <: layer( 32 ) <: relu_leaky <: layer( 64, f2_t( a ) );
+                }
+            "
+        </>
+
         sampler: <bhpt_sampler_binary_mul_s>
             bits  :  4 // input size = bits * 2; output size = bits * 2
             val_h :  0.5
@@ -12,30 +29,13 @@
         test_size  : 10000
     </>
 
-    builder: <lion_adaptive_bhpt_builder_s>
-        src:
-        "
-            cell ( y <- a )
-            {
-                cell layer( y <- hidden_nodes, a )
-                {
-                    adaptive w = rand( hidden_nodes [ dimof( a ) [ f2_t( # ) );
-                    adaptive b = hidden_nodes [ f2_t( 0 );
-                    y = w ** a + b;
-                };
-
-                y =	tanh <: layer( dimof( a ) ) <: relu_leaky <: layer( 32 ) <: relu_leaky <: layer( 64, f2_t( a ) );
-            }
-        "
-    </>
-
     adaptor: <bhpt_adaptor_list_s>
         <bhpt_adaptor_epsilon_s>  epsilon: 0.01 </>
         <bhpt_adaptor_zro_grad_s> </>
     </>
 
     threads      : 0
-    prime_cycles_per_thread  : 1
+    cycle_adapt  :        1
     cycle_test   :   100000
     cycle_backup :   200000
     cycle_finish :  1000000
