added pseudo random evaluation framework; moved design docu and todos from sem.h to design.txt

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -3,9 +3,11 @@
  */
 
 <bcore_main_set_s> arr: <bcore_main_arr_s>
-//    <#file> "../eval/lion_eval_nop_set_01.cfg" </>
-//    <#file> "../eval/lion_eval_frame_set_01.cfg" </>
-//    <#file> "../eval/lion_adaptor_eval_01.cfg" </>
+//    <#file> "../eval/lion/lion_eval_nop_set_01.cfg" </>
+//    <#file> "../eval/lion/lion_eval_frame_set_01.cfg" </>
+//    <#file> "../eval/lion/lion_adaptor_eval_01.cfg" </>
+
+    <#file> "../eval/brnd/brnd_eval_set_01.cfg" </>
 
 //    <#file> "../training/lion_test01.cfg" </>
 //    <#file> "../training/lion_test02.cfg" </>
@@ -26,7 +28,7 @@
 //    <#file> "../dev/holmes/a02/ll01.cfg" </>
 //    <#file> "../dev/holmes/a03/hpt_01.cfg" </>
 //    <#file> "../dev/holmes/a03/hpt_02.cfg" </>
-    <#file> "../dev/holmes/a03/hpt_03b.cfg" </>
+//    <#file> "../dev/holmes/a03/hpt_03b.cfg" </>
 //    <#file> "../dev/tolstoi_ak/a01/ll06.cfg" </>
 
 </></>
