adapted code to simplified plant framework

--- a/eval/lion/lion_eval_frame_set_01.cfg
+++ b/eval/lion/lion_eval_frame_set_01.cfg
@@ -190,7 +190,7 @@
                 {
                     cell layer( y <- hidden_nodes, a )
                     {
-                        adaptive w = rand( hidden_nodes [ dimof( a ) [ # );
+                        adaptive w = constof( rand( hidden_nodes [ dimof( a ) [ # ) );
                         adaptive b = hidden_nodes [ 0;
                         q = w ** a + b;
 
@@ -212,7 +212,7 @@
 
     <lion_eval_frame_plain_s>
         param: <lion_eval_frame_param_s>
-            name: "Frame MLP2" verbosity: 10 max_dev: 1E-4
+            name: "Frame MLP2" verbosity: -1 max_dev: 1E-4
             src:
             "
                 cell ( y <- a )
@@ -220,7 +220,7 @@
                     cell affine( y <- n, a )
                     {
                         a1 = a : 1;
-                        adaptive w = rand( floor( n ) [ dimof( a1 ) [ # );
+                        adaptive w = constof( rand( floor( n ) [ dimof( a1 ) [ # ) );
                         y = w ** a1;
                     };
 
@@ -250,7 +250,7 @@
                 {
                     cell layer( y, z <- hidden_nodes, a )
                     {
-                        adaptive w = rand( hidden_nodes [ dimof( a ) [ # );
+                        adaptive w = constof( rand( hidden_nodes [ dimof( a ) [ # ) );
                         adaptive b = hidden_nodes [ 0;
                         q = w ** a + b;
 
@@ -340,7 +340,7 @@
 
                         ah1 = a :: h : 1;
 
-                        adaptive w = rand( 4 [ dim_h [ dimof( ah1 ) [ #f2 ) * 0.5f2;
+                        adaptive w = constof( rand( 4 [ dim_h [ dimof( ah1 ) [ #f2 ) * 0.5f2 );
 
                         c_ = ( sigm( ( w]0 ) ** ah1 ) * c ) + ( sigm( ( w]1 ) ** ah1 ) * tanh( ( w]2 ) ** ah1 ) );
                         y  = ( sigm( ( w]3 ) ** ah1 ) * tanh( c_ ) );
@@ -351,7 +351,7 @@
 
                     cell lstm( y <- dim_out, dim_h, a )
                     {
-                        adaptive w_r = rand( dim_out [ ( dim_h + 1 ) [ #f2 );
+                        adaptive w_r = constof( rand( dim_out [ ( dim_h + 1 ) [ #f2 ) );
                         y = softmax( w_r ** ( layer( dim_h, a ) : 1f2 ) );
                     };
 
@@ -380,7 +380,7 @@
 
                         dim_ah = dimof( ah );
 
-                        cell create_w( y <- rows, cols ) { y = rand( rows [ cols [ f2_t( # ) ) * f2_t( 0.5 ); };
+                        cell create_w( y <- rows, cols ) { y = constof <: rand( rows [ cols [ f2_t( # ) ) * f2_t( 0.5 ); };
 
                         // adaptive holors
                         adaptive w_f = create_w( dim_h, dim_ah );
@@ -408,8 +408,8 @@
 
                     cell lstm( y <- dim_out, dim_h, a )
                     {
-                        adaptive w_r = rand( dim_out [ dim_h [ f2_t( # ) );
-                        adaptive b_r =       dim_out [ f2_t( # );
+                        adaptive w_r = constof <: rand( dim_out [ dim_h [ f2_t( # ) );
+                        adaptive b_r = dim_out [ f2_t( # );
                         y = softmax( w_r ** layer( dim_h, a ) + b_r );
                     };
 
