--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -3,9 +3,11 @@
  */
 
 <bcore_main_set_s> arr: <bcore_main_arr_s>
-//    <#file> "../eval/lion/lion_eval_nop_set_01.cfg" </>
-    <#file> "../eval/lion/lion_eval_frame_set_01.cfg" </>
-//    <#file> "../eval/lion/lion_adaptor_eval_01.cfg" </>
+//      <#file> "../eval/lion/lion_eval_nop_set_01.cfg" </>
+      <#file> "../eval/lion/lion_eval_frame_set_01.cfg" </>
+      <#file> "../eval/lion/lion_adaptor_eval_01.cfg" </>
+
+//    <#file> "../training/mlp_test01.cfg" </>
 
 //    <#file> "../training/lion_test01.cfg" </>
 //    <#file> "../training/lion_test02.cfg" </>
