switched randomization, monte-carlo tests, etc to new lcg_u3 generators

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -10,7 +10,7 @@
 //    <#file> "../training/mlp_test01.cfg" </>
 
 //    <#file> "../training/lion_test01.cfg" </>
-//    <#file> "../training/lion_test02.cfg" </>
+    <#file> "../training/lion_test02.cfg" </>
 
 //    <#file> "../training/bhpt_test01.cfg" </>
 //    <#file> "../training/bhpt_test02.cfg" </>
