--- a/eval/lion/lion_eval_nop_set_01.cfg
+++ b/eval/lion/lion_eval_nop_set_01.cfg
@@ -58,10 +58,10 @@
         v_max         :  1.0
         cycles        : 10000
 
-        /** Tests producing an error due to borderline or degenerate conditions are deemed correct (tolerated)
+        /** Tests producing an error due to borderline or degenerate conditions. Deemed correct (tolerated)
          *  The list contains cycle numbers of such tests
          */
-        tolerated_cycles: <bcore_arr_uz_s> 1977 2460 2872 7314 </>
+        tolerated_cycles: <bcore_arr_uz_s> 63 8049 8739 9481 </>
 
         //eval : <lion_eval_nop_show_param_s></>
         //eval: <lion_eval_nop_ar2_s></>
