--- a/training/lion_test02.cfg
+++ b/training/lion_test02.cfg
@@ -17,7 +17,7 @@
                 {
                     cell layer( y <- hidden_nodes, reduction, a )
                     {
-                        adaptive w = rand( hidden_nodes [ dimof( a ) [ f2_t( # ) );
+                        adaptive w = constof( rand( hidden_nodes [ dimof( a ) [ f2_t( # ) ) );
                         adaptive b = hidden_nodes [ f2_t( 0 );
                         q = w ** a + b;
 
@@ -25,7 +25,7 @@
                         adaptive c = 0.5;
                         r = c * tanh( q ) + ( 1 - c ) * relu( q );
 
-                        y = if( hidden_nodes == 1 ) then r else layer( ceil( hidden_nodes * reduction ), reduction, r );
+                        y = iff( ( hidden_nodes == 1 ), r, layer( ceil( hidden_nodes * reduction ), reduction, r ) );
                     };
                     y =	layer( 16, 0.5, a );
                 }
