adapted evaluation scripts to numeric changes

--- a/eval/lion/lion_eval_frame_set_01.cfg
+++ b/eval/lion/lion_eval_frame_set_01.cfg
@@ -204,7 +204,7 @@
                 }
             "
             in: "32[1"
-            out:"1[0.290876"
+            out:"1[-0.0759758"
             jacobian_test: true
             recovery_test: true
         </>
@@ -235,7 +235,7 @@
                 };
             "
             in: "32[1"
-            out:"0.071424"
+            out:"0.654855"
             jacobian_test: true
             recovery_test: true
         </>
@@ -265,7 +265,7 @@
                 }
             "
             in: "32[1"
-            out:"1[0.14337"
+            out:"1[-0.0759758"
             jacobian_test: true
             recovery_test: true
         </>
