--- a/eval/lion/lion_eval_nop_set_01.cfg
+++ b/eval/lion/lion_eval_nop_set_01.cfg
@@ -61,7 +61,7 @@
         /** Tests producing an error due to borderline or degenerate conditions. Deemed correct (tolerated)
          *  The list contains cycle numbers of such tests
          */
-        tolerated_cycles: <bcore_arr_uz_s> 63 8049 8739 9481 </>
+        tolerated_cycles: <bcore_arr_uz_s> 3537 3897 4651 7613 9042 </>
 
         //eval : <lion_eval_nop_show_param_s></>
         //eval: <lion_eval_nop_ar2_s></>
