--- a/src/plant_builder.cfg
+++ b/src/plant_builder.cfg
@@ -2,5 +2,6 @@
     dependencies: <bcore_arr_st_s>
         "../lib/badapt_dev/badapt_dev_plant_builder.cfg"
         "../lib/lion/lion_plant_builder.cfg"
+        "../lib/opal/opal_plant_builder.cfg"
     </>
 </>
