ported lion_eval_nop --> opal_eval_nop; switched randomization to bcore_prsg

--- a/lib/opal/opal_plant_builder.cfg
+++ b/lib/opal/opal_plant_builder.cfg
@@ -5,6 +5,7 @@
         "opal_context.h"
         "opal_holor.h"
         "opal_nop.h"
+        "opal_eval_nop.h"
 //        "opal_eval_nop.h"
 //        "opal_sem.h"
 //        "opal_net.h"
