ported semantic and network framework from lion to opal

--- a/lib/opal/opal_plant_builder.cfg
+++ b/lib/opal/opal_plant_builder.cfg
@@ -6,9 +6,8 @@
         "opal_holor.h"
         "opal_nop.h"
         "opal_eval_nop.h"
-//        "opal_eval_nop.h"
-//        "opal_sem.h"
-//        "opal_net.h"
+        "opal_sem.h"
+        "opal_net.h"
 //        "opal_frame.h"
 //        "opal_eval_frame.h"
 //        "opal_adaptive.h"
