ported opal_frame from lion_frame; ported evaluation; implemented semantic builder

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -6,7 +6,8 @@
 //      <#file> "../eval/lion/lion_eval_nop_set_01.cfg" </>
 //      <#file> "../eval/lion/lion_eval_frame_set_01.cfg" </>
 
-      <#file> "../eval/opal/opal_eval_nop_set_01.cfg" </>
+//      <#file> "../eval/opal/opal_eval_nop_set_01.cfg" </>
+      <#file> "../eval/opal/opal_eval_frame_set_01.cfg" </>
 
 //      <#file> "../eval/lion/lion_adaptor_eval_01.cfg" </>
 
