--- a/lib/opal/opal_plant_builder.cfg
+++ b/lib/opal/opal_plant_builder.cfg
@@ -8,8 +8,8 @@
         "opal_eval_nop.h"
         "opal_sem.h"
         "opal_net.h"
-//        "opal_frame.h"
-//        "opal_eval_frame.h"
+        "opal_frame.h"
+        "opal_eval_frame.h"
 //        "opal_adaptive.h"
 //        "opal_adaptor.h"
     </>
