ported adaptive and adaptor from lion

--- a/lib/opal/opal_plant_builder.cfg
+++ b/lib/opal/opal_plant_builder.cfg
@@ -10,8 +10,8 @@
         "opal_net.h"
         "opal_frame.h"
         "opal_eval_frame.h"
-//        "opal_adaptive.h"
-//        "opal_adaptor.h"
+        "opal_adaptive.h"
+        "opal_adaptor.h"
     </>
 
     dependencies:<bcore_arr_st_s>
