--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -7,7 +7,7 @@
 //      <#file> "../eval/lion/lion_eval_frame_set_01.cfg" </>
 
 //      <#file> "../eval/opal/opal_eval_nop_set_01.cfg" </>
-      <#file> "../eval/opal/opal_eval_frame_set_01.cfg" </>
+//      <#file> "../eval/opal/opal_eval_frame_set_01.cfg" </>
 
 //      <#file> "../eval/lion/lion_adaptor_eval_01.cfg" </>
 
@@ -16,12 +16,14 @@
 //    <#file> "../training/lion_test01.cfg" </>
 //    <#file> "../training/lion_test02.cfg" </>
 
-//    <#file> "../training/bhpt_test01.cfg" </>
-//    <#file> "../training/bhpt_test02.cfg" </>
-//    <#file> "../training/bhpt_test03.cfg" </>
-//    <#file> "../training/bhpt_test04.cfg" </>
-//    <#file> "../training/bhpt_test05.cfg" </>
-//    <#file> "../training/bhpt_test06.cfg" </>
+//    <#file> "../training/opal/bhpt_test01.cfg" </>
+//    <#file> "../training/opal/bhpt_test02.cfg" </>
+//    <#file> "../training/opal/bhpt_test03.cfg" </>
+//    <#file> "../training/opal/bhpt_test04.cfg" </>
+//    <#file> "../training/opal/bhpt_test05.cfg" </>
+//    <#file> "../training/opal/bhpt_test06.cfg" </>
+
+    <#file> "../dev/holmes/a03/hpt_01.cfg" </>
 
 //    <#file> "../dev/kjv/hard_lstm_v0.cfg" </>
 //    <#file> "../dev/kjv/hard_lstm_v2.cfg" </>
@@ -30,7 +32,6 @@
 //    <#file> "../dev/kjv/lion_lstm_v2.cfg" </>
 //    <#file> "../dev/kjv/a02/ll05.cfg" </>
 //    <#file> "../dev/holmes/a02/ll01.cfg" </>
-//    <#file> "../dev/holmes/a03/hpt_01.cfg" </>
 //    <#file> "../dev/holmes/a03/hpt_02.cfg" </>
 //    <#file> "../dev/holmes/a03/hpt_03b.cfg" </>
 //    <#file> "../dev/tolstoi_ak/a01/ll06.cfg" </>
