--- a/training/lion/bhpt_test01.cfg
+++ b/training/lion/bhpt_test01.cfg
@@ -1,4 +1,4 @@
-#! ../bin/Release/badapt_dev
+#! ../../bin/Release/badapt_dev
 <bhpt_frame_s>
     tutor: <bhpt_tutor_sampler_s>
         sampler: <bhpt_sampler_sine_random_s>
@@ -14,7 +14,7 @@
                 {
                     cell layer( y <- hidden_nodes, a )
                     {
-                        adaptive w = rand( hidden_nodes [ dimof( a ) [ f2_t( # ) );
+                        adaptive w = constof( rand( hidden_nodes [ dimof( a ) [ f2_t( # ) ) );
                         adaptive b = hidden_nodes [ f2_t( 0 );
                         q = w ** a + b;
 
@@ -31,18 +31,18 @@
             "
         </>
 
-        rval_prime : 1234
-        rval_test  : 5753
+        adaptor: <bhpt_adaptor_list_s>
+            <bhpt_adaptor_epsilon_s>  epsilon: 0.001 </>
+            <bhpt_adaptor_reg_l2_s>   lambda: 1E-7 </>
+            <bhpt_adaptor_zro_grad_s> </>
+        </>
+
+        prsg_priming : <bcore_prsg_lcg_u3_00_s> state: 2567897 </>
+        prsg_testing : <bcore_prsg_lcg_u3_00_s> state: 3526713 </>
         test_size  : 10000
     </>
 
-    adaptor: <bhpt_adaptor_list_s>
-        <bhpt_adaptor_epsilon_s>  epsilon: 0.001 </>
-        <bhpt_adaptor_reg_l2_s>   lambda: 1E-7 </>
-        <bhpt_adaptor_zro_grad_s> </>
-    </>
-
-    threads      :       8
+    threads      :       1
     cycle_adapt  :     400
     cycle_test   :  100000
     cycle_backup :  200000
