--- a/training/lion/bhpt_test04.cfg
+++ b/training/lion/bhpt_test04.cfg
@@ -1,4 +1,4 @@
-#! ../bin/Release/badapt_dev
+#! ../../bin/Release/badapt_dev
 <bhpt_frame_s>
     tutor: <bhpt_tutor_sampler_s>
         builder: <lion_adaptive_bhpt_builder_s>
@@ -8,7 +8,7 @@
                 {
                     cell layer( y <- hidden_nodes, a )
                     {
-                        adaptive w = rand( hidden_nodes [ dimof( a ) [ f2_t( # ) );
+                        adaptive w = constof( rand( hidden_nodes [ dimof( a ) [ f2_t( # ) ) );
                         adaptive b = hidden_nodes [ f2_t( 0 );
                         y = w ** a + b;
                     };
@@ -24,21 +24,21 @@
             val_l  : -0.5
         </>
 
-        rval_prime : 3568
-        rval_test  : 5754
+        adaptor: <bhpt_adaptor_list_s>
+            <bhpt_adaptor_epsilon_s>  epsilon: 0.001 </>
+            <bhpt_adaptor_zro_grad_s> </>
+        </>
+
+        prsg_priming : <bcore_prsg_lcg_u3_00_s> state: 2567897 </>
+        prsg_testing : <bcore_prsg_lcg_u3_00_s> state: 3526713 </>
         test_size  : 10000
     </>
 
-    adaptor: <bhpt_adaptor_list_s>
-        <bhpt_adaptor_epsilon_s>  epsilon: 0.001 </>
-        <bhpt_adaptor_zro_grad_s> </>
-    </>
-
-    threads      : 0
-    cycle_adapt  :        1
-    cycle_test   :   10000
-    cycle_backup :   20000
-    cycle_finish :  100000
+    threads      :       0
+    cycle_adapt  :       1
+    cycle_test   :  100000
+    cycle_backup :  200000
+    cycle_finish : 1000000
     verbosity    :       1
 
 </>
