--- a/training/lion/lion_test02.cfg
+++ b/training/lion/lion_test02.cfg
@@ -1,4 +1,4 @@
-#! ../bin/Release/badapt_dev
+#! ../../bin/Release/badapt_dev
 <badapt_trainer_main_s>
     problem:
         <badapt_problem_sine_random_s>
