adaptations to changes in beth

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -23,7 +23,7 @@
 //    <#file> "../training/opal/bhpt_test05.cfg" </>
 //    <#file> "../training/opal/bhpt_test06.cfg" </>
 
-    <#file> "../dev/holmes/a03/hpt_01.cfg" </>
+    <#file> "../dev/holmes/a03/opal/hpt_01.cfg" </>
 
 //    <#file> "../dev/kjv/hard_lstm_v0.cfg" </>
 //    <#file> "../dev/kjv/hard_lstm_v2.cfg" </>
