implemented identification scheme for holors implemented type specifier 'param' and associated operator

--- a/eval/opal/opal_eval_frame_set_01.cfg
+++ b/eval/opal/opal_eval_frame_set_01.cfg
@@ -119,7 +119,7 @@
 
     <opal_eval_frame_plain_s>
         param: <opal_eval_frame_param_s>
-            name: "ADAPT (Vector)" verbosity: -1
+            name: "ADAPT (Vector)" verbosity: 0
 
             src:
             "
@@ -186,7 +186,7 @@
             name: "Frame MLP" verbosity: -1 max_dev: 1E-4
             src:
             "
-                cell ( y <- a )
+                cell mlp( y <- a )
                 {
                     cell layer( y <- hidden_nodes, a )
                     {
@@ -201,6 +201,7 @@
                     };
 
                     y =	layer( 1 ) <: layer( 16 ) <: layer( 16 ) <: layer( 16, a );
+                    //y =	layer( 1, layer( 16, layer( 16, layer( 16, a ) ) ) );
                 }
             "
             in: "32[1"
@@ -273,7 +274,7 @@
 
     <opal_eval_frame_plain_s>
         param: <opal_eval_frame_param_s>
-            name: "Frame cyclic" verbosity: 0 max_dev: 1E-4
+            name: "Frame cyclic" verbosity: -1 max_dev: 1E-4
             src: "( y <- a ) { cyclic r = 1; q = a + r; r = q; y = q; };"
             in: "1"
             out:"6"
@@ -304,6 +305,16 @@
             recovery_test: true
         </>
         ap_cycles: 5
+    </>
+
+    <opal_eval_frame_cyclic_s>
+        param: <opal_eval_frame_param_s>
+            name: "Frame param" verbosity: 10 max_dev: 1E-4
+            src: "( y <- a ) { param r = 2; q = a * r; y = q; };"
+            in: "1, 2, 3"
+            jacobian_test: true
+            recovery_test: true
+        </>
     </>
 
     <opal_eval_frame_cyclic_s>
