--- a/lib/opal/opal_plant_builder.cfg
+++ b/lib/opal/opal_plant_builder.cfg
@@ -4,6 +4,7 @@
     sources:<bcore_arr_st_s>
         "opal_context.h"
         "opal_holor.h"
+        "opal_scid.h"
         "opal_nop.h"
         "opal_eval_nop.h"
         "opal_sem.h"
