--- a/lib/badapt_dev/badapt_dev_xoico.cfg
+++ b/lib/badapt_dev/badapt_dev_xoico.cfg
@@ -1,4 +1,4 @@
-<bcore_plant_builder_target_s>
+<xoico_builder_target_s>
     name:"badapt_dev"
     
     sources:<bcore_arr_st_s>
@@ -8,7 +8,7 @@
     </>
 
     dependencies:<bcore_arr_st_s>
-        "../../../beth/lib/badapt/badapt_plant_builder.cfg"
+        "../../../beth/lib/badapt/badapt_xoico.cfg"
     </>       
 </>
 
