--- a/lib/lion/lion_xoico.cfg
+++ b/lib/lion/lion_xoico.cfg
@@ -1,4 +1,4 @@
-<bcore_plant_builder_target_s>
+<xoico_builder_target_s>
     name:"lion"
 
     sources:<bcore_arr_st_s>
@@ -15,9 +15,9 @@
     </>
 
     dependencies:<bcore_arr_st_s>
-        "../../../beth/lib/bhpt/bhpt_plant_builder.cfg"
-        "../../../beth/lib/bhvm/bhvm_plant_builder.cfg"
-        "../../../beth/lib/bmath/bmath_plant_builder.cfg"
+        "../../../beth/lib/bhpt/bhpt_xoico.cfg"
+        "../../../beth/lib/bhvm/bhvm_xoico.cfg"
+        "../../../beth/lib/bmath/bmath_xoico.cfg"
     </>
 
 </>
