--- a/lib/opal/opal_xoico.cfg
+++ b/lib/opal/opal_xoico.cfg
@@ -1,7 +1,7 @@
-<bcore_plant_builder_target_s>
+<xoico_builder_target_s>
     name:"opal"
 
-    sources:<bcore_arr_st_s>
+    sources: <bcore_arr_st_s>
         "opal_context.h"
         "opal_holor.h"
         "opal_nop.h"
@@ -14,10 +14,10 @@
         "opal_adaptor.h"
     </>
 
-    dependencies:<bcore_arr_st_s>
-        "../../../beth/lib/bhpt/bhpt_plant_builder.cfg"
-        "../../../beth/lib/bhvm/bhvm_plant_builder.cfg"
-        "../../../beth/lib/bmath/bmath_plant_builder.cfg"
+    dependencies: <bcore_arr_st_s>
+        "../../../beth/lib/bhpt/bhpt_xoico.cfg"
+        "../../../beth/lib/bhvm/bhvm_xoico.cfg"
+        "../../../beth/lib/bmath/bmath_xoico.cfg"
     </>
 
 </>
