--- a/lib/badapt_dev/badapt_dev_xoico.cfg
+++ b/lib/badapt_dev/badapt_dev_xoico.cfg
@@ -1,6 +1,6 @@
 <xoico_builder_target_s>
     name:"badapt_dev"
-    
+
     sources:<bcore_arr_st_s>
         "badapt_dev_problem.h"
         "badapt_dev_ern.h"
@@ -8,7 +8,7 @@
     </>
 
     dependencies:<bcore_arr_st_s>
-        "../../../beth/lib/badapt/badapt_xoico.cfg"
-    </>       
+        "../../../beth/lib/badapt/badapt_xoico.cfg: readonly"
+    </>
 </>
 
