--- a/lib/lion/lion_xoico.cfg
+++ b/lib/lion/lion_xoico.cfg
@@ -15,9 +15,9 @@
     </>
 
     dependencies:<bcore_arr_st_s>
-        "../../../beth/lib/bhpt/bhpt_xoico.cfg"
-        "../../../beth/lib/bhvm/bhvm_xoico.cfg"
-        "../../../beth/lib/bmath/bmath_xoico.cfg"
+        "../../../beth/lib/bhpt/bhpt_xoico.cfg: readonly"
+        "../../../beth/lib/bhvm/bhvm_xoico.cfg: readonly"
+        "../../../beth/lib/bmath/bmath_xoico.cfg: readonly"
     </>
 
 </>
