--- a/src/main_xoico.cfg
+++ b/src/main_xoico.cfg
@@ -1,4 +1,6 @@
 <xoico_builder_target_s>
+    name: "main"
+
     dependencies: <bcore_arr_st_s>
         "../lib/badapt_dev/badapt_dev_xoico.cfg"
         "../lib/lion/lion_xoico.cfg"
