--- a/lib/badapt_dev/badapt_dev_xoico.cfg
+++ b/lib/badapt_dev/badapt_dev_xoico.cfg
@@ -1,6 +1,11 @@
 <xoico_builder_target_s>
     name:"badapt_dev"
 
+    cengine: <xoico_cgimel_s>
+        //fallback: <xoico_caleph_s> </>
+        verbose: false
+    </>
+
     sources:<bcore_arr_st_s>
         "badapt_dev_problem.h"
         "badapt_dev_ern.h"
