--- a/lib/lion/lion_xoico.cfg
+++ b/lib/lion/lion_xoico.cfg
@@ -1,6 +1,11 @@
 <xoico_builder_target_s>
     name:"lion"
 
+    cengine: <xoico_cgimel_s>
+        //fallback: <xoico_caleph_s> </>
+        verbose: false
+    </>
+
     sources:<bcore_arr_st_s>
         "lion_root.h"
         "lion_nop.h"
