--- a/lib/opal/opal_xoico.cfg
+++ b/lib/opal/opal_xoico.cfg
@@ -1,6 +1,11 @@
 <xoico_builder_target_s>
     name:"opal"
 
+    cengine: <xoico_cgimel_s>
+        //fallback: <xoico_caleph_s> </>
+        verbose: false
+    </>
+
     sources: <bcore_arr_st_s>
         "opal_context.h"
         "opal_holor.h"
