--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -13,7 +13,8 @@
 //    <#file> "../training/opal/bhpt_test05.cfg" </>
 //    <#file> "../training/opal/bhpt_test06.cfg" </>
 
-//    <#file> "../dev/holmes/a03/opal/hpt_01.cfg" </>
+    <#file> "../dev/holmes/a03/opal/hpt_01.cfg" </>
+//    <#file> "../dev/holmes/a03/lion/hpt_01.cfg" </>
 
 //    <#file> "../training/mlp_test01.cfg" </>
 
