switched to latest c-engine

--- a/lib/badapt_dev/badapt_dev_xoico.cfg
+++ b/lib/badapt_dev/badapt_dev_xoico.cfg
@@ -1,7 +1,7 @@
 <xoico_builder_target_s>
     name:"badapt_dev"
 
-    cengine: <xoico_cgimel_s>
+    cengine: <xoico_che_s>
         //fallback: <xoico_caleph_s> </>
         verbose: false
     </>
