--- a/lib/opal/opal_xoico.cfg
+++ b/lib/opal/opal_xoico.cfg
@@ -1,7 +1,7 @@
 <xoico_builder_target_s>
     name:"opal"
 
-    cengine: <xoico_cdaleth_s>
+    cengine: <xoico_che_s>
         verbose: false
     </>
 
