--- a/lib/opal/opal_xoico.cfg
+++ b/lib/opal/opal_xoico.cfg
@@ -2,7 +2,10 @@
     name:"opal"
 
     cengine: <xoico_che_s>
-        verbose: false
+        waive_non_member_variable: false
+        waive_non_member_function: false
+        waive_function_in_untraced_context: false
+        waive_unknown_identifier: true
     </>
 
     sources: <bcore_arr_st_s>
