--- a/lib/opal/opal_xoico.cfg
+++ b/lib/opal/opal_xoico.cfg
@@ -1,5 +1,6 @@
 <xoico_builder_target_s>
     name:"opal"
+    define_signal_handler: true
 
     cengine: <xoico_che_s>
         waive_unknown_member_variable: false
