flag: signal_handler

--- a/lib/badapt_dev/badapt_dev_xoico.cfg
+++ b/lib/badapt_dev/badapt_dev_xoico.cfg
@@ -1,8 +1,8 @@
 <xoico_builder_target_s>
     name:"badapt_dev"
+    define_signal_handler: false
 
     cengine: <xoico_che_s>
-        //fallback: <xoico_caleph_s> </>
         verbose: false
     </>
 
