--- a/lib/lion/lion_xoico.cfg
+++ b/lib/lion/lion_xoico.cfg
@@ -1,5 +1,6 @@
 <xoico_builder_target_s>
     name:"lion"
+    define_signal_handler: false
 
     cengine: <xoico_che_s>
         //fallback: <xoico_caleph_s> </>
