simplified file structure

--- a/lib/opal/opal_xoico.cfg
+++ b/lib/opal/opal_xoico.cfg
@@ -10,16 +10,16 @@
     </>
 
     sources: <bcore_arr_st_s>
-        "opal_context.h"
-        "opal_holor.h"
-        "opal_nop.h"
-        "opal_eval_nop.h"
-        "opal_sem.h"
-        "opal_net.h"
-        "opal_frame.h"
-        "opal_eval_frame.h"
-        "opal_adaptive.h"
-        "opal_adaptor.h"
+        "opal_context.x"
+        "opal_holor.x"
+        "opal_nop.x"
+        "opal_eval_nop.x"
+        "opal_sem.x"
+        "opal_net.x"
+        "opal_frame.x"
+        "opal_eval_frame.x"
+        "opal_adaptive.x"
+        "opal_adaptor.x"
     </>
 
     dependencies: <bcore_arr_st_s>
