--- a/src/main_xoico.cfg
+++ b/src/main_xoico.cfg
@@ -1,5 +1,9 @@
 <xoico_builder_target_s>
-    name: "main"
+    name: "app_main"
+
+    sources: <bcore_arr_st_s>
+    	"app_main.x"
+    </>
 
     dependencies: <bcore_arr_st_s>
         "../lib/badapt_dev/badapt_dev_xoico.cfg"
