--- a/lib/opal/opal_xoico.cfg
+++ b/lib/opal/opal_xoico.cfg
@@ -5,20 +5,21 @@
         waive_unknown_member_variable: false
         waive_unknown_member_function: false
         waive_function_in_untraced_context: false
-        waive_unknown_identifier: true
+        waive_unknown_identifier: false
     </>
 
     sources: <bcore_arr_st_s>
         "opal_context.x"
         "opal_holor.x"
-        "opal_nop.x"
-        "opal_eval_nop.x"
-        "opal_sem.x"
-        "opal_net.x"
-        "opal_frame.x"
-        "opal_eval_frame.x"
-        "opal_adaptive.x"
-        "opal_adaptor.x"
+        "opal_nop.x"        // node operators
+        "opal_eval_nop.x"   // evaluation of nop
+        "opal_sem.x"        // semantic graph
+        "opal_net.x"        // wired graph
+        "opal_frame.x"      // compiled graph
+        "opal_fop.x"        // frame operators
+        "opal_eval_frame.x" // evaluation of frame
+        "opal_adaptive.x"   // bhpt-adaptive glue
+        "opal_adaptor.x"    // bhpt-adaptors
     </>
 
     dependencies: <bcore_arr_st_s>
