--- a/lib/badapt_dev/badapt_dev_xoico.cfg
+++ b/lib/badapt_dev/badapt_dev_xoico.cfg
@@ -4,6 +4,7 @@
 
     cengine: <xoico_che_s>
         verbose: false
+        waive_unknown_identifier: true
     </>
 
     sources:<bcore_arr_st_s>
