--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -6,7 +6,7 @@
     <#file> "../eval/opal/opal_eval_nop_set_01.cfg" </>
     <#file> "../eval/opal/opal_eval_frame_set_01.cfg" </>
 
-//    <#file> "../training/opal/bhpt_test01.cfg" </>
+    <#file> "../training/opal/bhpt_test01.cfg" </>
 
 //    <#file> "../dev/holmes/a03/opal/hpt_01.cfg" </>
 
